--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -149,7 +149,7 @@ jobs:
           
         
           # Apply all backend configurations
-          kubectl apply -f k8s/configmaps.yaml -f k8s/secrets.yaml -f k8s/product-db.yaml -f k8s/order-db.yaml -f k8s/customer_db.yaml
+          kubectl apply -f k8s/configmaps.yaml -f k8s/secrets.yaml -f k8s/product-db.yaml -f k8s/order-db.yaml -f k8s/customer-db.yaml
           kubectl apply -f k8s/product-service.yaml -f k8s/order-service.yaml -f k8s/customer_service.yaml
 
       # This step attempts to obtain IPs of deployed backend services
