--- a/.github/workflows/ci-and-stage-deploy.yml
+++ b/.github/workflows/ci-and-stage-deploy.yml
@@ -43,15 +43,21 @@ jobs:
           terraform init
           terraform apply -auto-approve
           
-          # Use terraform output to get the names of the created resources
-          echo "STAGING_RG=$(terraform output -raw resource_group_name)" >> $GITHUB_ENV
-          echo "STAGING_AKS_CLUSTER=$(terraform output -raw kubernetes_cluster_name)" >> $GITHUB_ENV
-          echo "STAGING_ACR=$(terraform output -raw container_registry_login_server)" >> $GITHUB_ENV
-          echo "STAGING_STORAGE_ACCOUNT=$(terraform output -raw storage_account_name)" >> $GITHUB_ENV
-          # Capture the sensitive storage key
-          echo "STAGING_STORAGE_KEY=$(terraform output -raw storage_account_primary_key)" >> $GITHUB_ENV
+          # Get all outputs in JSON format once, which is safer
+          TF_OUTPUTS=$(terraform output -json)
+          
+          # Use the 'jq' tool to parse the JSON and set environment variables
+          echo "STAGING_RG=$(echo $TF_OUTPUTS | jq -r .resource_group_name.value)" >> $GITHUB_ENV
+          echo "STAGING_AKS_CLUSTER=$(echo $TF_OUTPUTS | jq -r .kubernetes_cluster_name.value)" >> $GITHUB_ENV
+          echo "STAGING_ACR=$(echo $TF_OUTPUTS | jq -r .container_registry_login_server.value)" >> $GITHUB_ENV
+          echo "STAGING_STORAGE_ACCOUNT=$(echo $TF_OUTPUTS | jq -r .storage_account_name.value)" >> $GITHUB_ENV
+          
+          # Capture the sensitive storage key using the same safe method
+          STAGING_KEY=$(echo $TF_OUTPUTS | jq -r .storage_account_primary_key.value)
+          echo "STAGING_STORAGE_KEY=$STAGING_KEY" >> $GITHUB_ENV
+          
           # Mask the key in the workflow logs so it doesn't get exposed
-          echo "::add-mask::$(terraform output -raw storage_account_primary_key)"
+          echo "::add-mask::$STAGING_KEY"
 
       # Step 2: Build images and push them to the NEWLY CREATED staging ACR
       - name: Login to Staging ACR & Build/Push Backend Images
