--- a/.github/workflows/ci-and-stage-deploy.yml
+++ b/.github/workflows/ci-and-stage-deploy.yml
@@ -43,20 +43,18 @@ jobs:
           terraform init
           terraform apply -auto-approve
           
-          # Get all outputs in JSON format once, which is safer
+          # Get all outputs in JSON format once
           TF_OUTPUTS=$(terraform output -json)
           
-          # Use the 'jq' tool to parse the JSON and set environment variables
-          echo "STAGING_RG=$(echo $TF_OUTPUTS | jq -r .resource_group_name.value)" >> $GITHUB_ENV
-          echo "STAGING_AKS_CLUSTER=$(echo $TF_OUTPUTS | jq -r .kubernetes_cluster_name.value)" >> $GITHUB_ENV
-          echo "STAGING_ACR=$(echo $TF_OUTPUTS | jq -r .container_registry_login_server.value)" >> $GITHUB_ENV
-          echo "STAGING_STORAGE_ACCOUNT=$(echo $TF_OUTPUTS | jq -r .storage_account_name.value)" >> $GITHUB_ENV
+          # Use 'jq' to parse the JSON, making sure to QUOTE the variable
+          echo "STAGING_RG=$(echo "$TF_OUTPUTS" | jq -r .resource_group_name.value)" >> $GITHUB_ENV
+          echo "STAGING_AKS_CLUSTER=$(echo "$TF_OUTPUTS" | jq -r .kubernetes_cluster_name.value)" >> $GITHUB_ENV
+          echo "STAGING_ACR=$(echo "$TF_OUTPUTS" | jq -r .container_registry_login_server.value)" >> $GITHUB_ENV
+          echo "STAGING_STORAGE_ACCOUNT=$(echo "$TF_OUTPUTS" | jq -r .storage_account_name.value)" >> $GITHUB_ENV
           
-          # Capture the sensitive storage key using the same safe method
-          STAGING_KEY=$(echo $TF_OUTPUTS | jq -r .storage_account_primary_key.value)
+          # Capture and mask the sensitive storage key
+          STAGING_KEY=$(echo "$TF_OUTPUTS" | jq -r .storage_account_primary_key.value)
           echo "STAGING_STORAGE_KEY=$STAGING_KEY" >> $GITHUB_ENV
-          
-          # Mask the key in the workflow logs so it doesn't get exposed
           echo "::add-mask::$STAGING_KEY"
 
       # Step 2: Build images and push them to the NEWLY CREATED staging ACR
