--- a/.github/workflows/ci-and-stage-deploy.yml
+++ b/.github/workflows/ci-and-stage-deploy.yml
@@ -42,21 +42,19 @@ jobs:
           cd ./terraform/staging
           terraform init
           terraform apply -auto-approve
-          terraform output -json
           
-          # Get all outputs in JSON format once
-          TF_OUTPUTS=$(terraform output -json)
+          echo "Setting environment variables for this staging run..."
+          echo "STAGING_RG=${{ env.TF_VAR_prefix }}" >> $GITHUB_ENV
+          echo "STAGING_AKS_CLUSTER=${{ env.TF_VAR_prefix }}" >> $GITHUB_ENV
+          echo "STAGING_ACR=${{ env.TF_VAR_prefix }}.azurecr.io" >> $GITHUB_ENV
+          echo "STAGING_STORAGE_ACCOUNT=${{ env.TF_VAR_prefix }}" >> $GITHUB_ENV
           
-          # Use jq to parse the JSON and set environment variables
-          echo "STAGING_RG=$(echo $TF_OUTPUTS | jq -r '.resource_group_name.value')" >> $GITHUB_ENV
-          echo "STAGING_AKS_CLUSTER=$(echo "$TF_OUTPUTS" | jq -r '.kubernetes_cluster_name.value')" >> $GITHUB_ENV
-          echo "STAGING_ACR=$(echo "$TF_OUTPUTS" | jq -r '.container_registry_login_server.value')" >> $GITHUB_ENV
-          echo "STAGING_STORAGE_ACCOUNT=$(echo "$TF_OUTPUTS" | jq -r '.storage_account_name.value')" >> $GITHUB_ENV
+          # Fetch the storage account key directly using Azure CLI
+          STORAGE_KEY=$(az storage account keys list --resource-group "${{ env.TF_VAR_prefix }}" --account-name "${{ env.TF_VAR_prefix }}" --query '[0].value' -o tsv)
+          echo "STAGING_STORAGE_KEY=$STORAGE_KEY" >> $GITHUB_ENV
           
-          # Capture and mask the sensitive storage key
-          STAGING_KEY=$(echo "$TF_OUTPUTS" | jq -r '.storage_account_primary_key.value')
-          echo "STAGING_STORAGE_KEY=$STAGING_KEY" >> $GITHUB_ENV
-          echo "::add-mask::$STAGING_KEY"
+          # Mask the key in the workflow logs so it doesn't get exposed
+          echo "::add-mask::$STORAGE_KEY"
 
       # Step 2: Build images and push them to the NEWLY CREATED staging ACR
       - name: Login to Staging ACR & Build/Push Backend Images
