--- a/.github/workflows/ci-and-stage-deploy.yml
+++ b/.github/workflows/ci-and-stage-deploy.yml
@@ -213,6 +213,9 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
+          echo "Installing Docker Scout CLI..."
+          curl -sSfL https://raw.githubusercontent.com/docker/scout-cli/main/install.sh | sh -s --
+          
           # Define the list of full image names in the staging ACR
           # We use the STAGING_ACR_LOGIN_SERVER variable set by the Terraform step
           IMAGES=(
